# world-wgpu

./: Cargo.toml  README.md  todo.md
astro/: Cargo.toml
astro/src/: constants.rs  lib.rs
docs/: msaa.md
examples/autumnal_equinox/: Cargo.toml
examples/autumnal_equinox/src/: main.rs
examples/colored/: Cargo.toml
examples/colored/src/: main.rs  program.rs
examples/earth_texture/: Cargo.toml
examples/earth_texture/src/: main.rs
examples/frame_validation/: Cargo.toml
examples/frame_validation/src/: main.rs
examples/moon_phases/: Cargo.toml
examples/moon_phases/src/: main.rs
examples/orbit_elements/: Cargo.toml
examples/orbit_elements/src/: main.rs
examples/shapes/: Cargo.toml
examples/shapes/src/: main.rs
examples/simulation/: Cargo.toml
examples/simulation/src/: main.rs
examples/summer_solstice/: Cargo.toml
examples/summer_solstice/src/: main.rs
examples/textured/: Cargo.toml
examples/textured/src/: main.rs  program.rs
examples/vernal_equinox/: Cargo.toml
examples/vernal_equinox/src/: main.rs
examples/winter_solstice/: Cargo.toml
examples/winter_solstice/src/: main.rs
geometry/: Cargo.toml
geometry/src/: tesselation.rs
gui/: Cargo.toml
gui/src/: application.rs  lib.rs  simulation.rs
gui/src/astro/: constants.rs  mod.rs
gui/src/gpu/: camera.rs  gpu.rs  maths.rs  mod.rs  pipeline.rs  texture.rs  vertex.rs
gui/src/gpu/pipelines/: colored.rs  mod.rs  textured.rs
gui/src/gpu/pipelines/colored/: pipeline.rs  shader.wgsl  vertex.rs
gui/src/gpu/pipelines/planet/: atmosphere.rs  camera.rs  clear_quad.rs  cloud.rs  instance_mesh.rs  mod.rs  moon.rs  pipeline.rs  pipelines.rs  planet.rs  resolve_msaa.rs  satellite.rs  shapes.rs  star_catalog.rs  station.rs  texture.rs  trajectory.rs  uniforms.rs  vertex.rs
gui/src/gpu/pipelines/star/: mod.rs  pipeline.rs  vertex.rs
gui/src/gpu/pipelines/textured/: camera.rs  mod.rs  pipeline.rs  shader.wgsl  vertex.rs
gui/src/gpu/shaders/: atmosphere_shader.wgsl  clear_quad_shader.wgsl  cloud_shader.wgsl  colored_line_shader.wgsl  line_shader.wgsl  moon_shader.wgsl  planet_shader.wgsl  resolve_msaa_shader.wgsl  satellite_shader.wgsl  shader.wgsl  star_catalog_shader.wgsl  star_shader.wgsl  station_shader.wgsl  trajectory_shader.wgsl
gui/src/maths/: commons.rs
gui/src/model/: ground_station.rs  mod.rs  orbit.rs  satellite.rs  shapes.rs  simulation.rs  system.rs  text_vertices.rs
gui/src/model/shapes/: frame.rs  line.rs  mod.rs  orbital_elements.rs  point.rs
gui/src/simulation/: frame.rs  mod.rs  planet_pipeline.rs  simulation.rs  square_pipeline.rs  square_shader.wgsl
gui/src/ui/: mod.rs
gui/src/ui/components/: button.rs  layout.rs  mod.rs  panel.rs  sidebar.rs  status_bar.rs
gui/src/ui/screens/: main_screen.rs
gui/src/ui/theme/: colors.rs  icons.rs  mod.rs  spacing.rs  typography.rs
gui/src/ui/widgets/: control_group.rs  mod.rs
