[package]
name = "gui"
description = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
geometry.workspace = true
astro.workspace = true

iced.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
pollster.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
assertor.workspace = true
nalgebra.workspace = true
mockall.workspace = true
image.workspace = true
rand.workspace = true
