[package]
name = "gui"
description = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[lints]
workspace = true

[dependencies]
geometry.workspace = true
chrono = "0.4"

iced.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
pollster.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
assertor.workspace = true
nalgebra.workspace = true
mockall.workspace = true
image.workspace = true
rand.workspace = true
csv = "1.3"
flate2 = "1.0"
iced_font_awesome.workspace = true
